--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # Package Files #
 *.jar
 *.war
+/target
 *.ear
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
