--- a/src/main/resources/application-prod_postgre.properties
+++ b/src/main/resources/application-prod_postgre.properties
@@ -1,1 +1,11 @@
 app.desc=Application runs with MONGODB
+
+logging.level.cz.tul=INFO
+spring.datasource.url=jdbc:postgresql://localhost:5432/PPJDB
+spring.datasource.username=postgres
+spring.datasource.password=postgre
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+#HIBERNATE
+spring.jpa.hibernate.show_sql=false
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
