--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,1 +1,12 @@
 app.desc=Application runs in TEST profile
+
+logging.level.cz.tul=INFO
+spring.datasource.url=jdbc:hsqldb:mem:test
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
+
+#HIBERNATE
+spring.jpa.hibernate.show_sql=true
+spring.jpa.hibernate.hbm2ddl.auto=create
+spring.jpa.hibernate.dialect=org.hibernate.dialect.HSQLDialect
