--- a/src/main/resources/application-prod_mongo.properties
+++ b/src/main/resources/application-prod_mongo.properties
@@ -1,1 +1,4 @@
 app.desc=Application runs in production profile - PROD
+
+logging.level.cz.tul=INFO
+spring.data.mongodb.uri=mongodb://192.168.55.242:27017/ppj_projekt
