--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ hs_err_pid*
 *.iml
 
 ## Directory-based project format:
+/log.out
 .idea/
 # if you remove the above rule, at least ignore the following:
 
