--- a/src/main/resources/application-postgre.properties
+++ b/src/main/resources/application-postgre.properties
@@ -11,4 +11,4 @@ spring.datasource.platform=postgres
 spring.jpa.database=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
