--- a/src/main/resources/application-hsqldb.properties
+++ b/src/main/resources/application-hsqldb.properties
@@ -1,6 +1,6 @@
 logging.level.cz.hombre=INFO
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
-spring.datasource.url=jdbc:hsqldb:mem:test
+spring.datasource.url=jdbc:hsqldb:mem:test2
 spring.datasource.name=sa
 spring.datasource.password=
 spring.jpa.show-sql:true
