--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,6 +1,6 @@
-logging.level.cz.hombre=INFO
+logging.level.cz.hombre=DEBUG
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
-spring.datasource.url=jdbc:hsqldb:mem:test2
+spring.datasource.url=jdbc:hsqldb:mem:test
 spring.datasource.name=
 spring.datasource.password=
 spring.jpa.hibernate.show_sql=true
