--- a/src/main/resources/application-mongo.properties
+++ b/src/main/resources/application-mongo.properties
@@ -1,3 +1,3 @@
-logging.level.cz.hombre=INFO
+logging.level.cz.hombre=WARN
 spring.data.mongodb.uri=mongodb://192.168.55.242:27017/ppj_projekt
 spring.data.mongodb.port=27017
