--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,12 @@
             <artifactId>jquery</artifactId>
             <version>2.1.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.squareup.retrofit</groupId>
+            <artifactId>retrofit</artifactId>
+            <version>1.9.0</version>
+        </dependency>
     </dependencies>
 
     <build>
