--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.profiles.active=mongo
+spring.profiles.active=postgre
+#spring.profiles.active=postgre
 #spring.profiles.active=mongo
 #spring.profiles.active=test
 
